[gd_scene load_steps=4 format=3 uid="uid://cvmyv51i5k57t"]

[ext_resource type="FontFile" uid="uid://dfll48yc2x5gg" path="res://fonts/PixelOperator8.ttf" id="1_5rf73"]
[ext_resource type="Script" path="res://scripts/text_bubble.gd" id="1_a7t4n"]
[ext_resource type="Texture2D" uid="uid://07l2fwmadplw" path="res://sprites/text_bubble.png" id="1_bn1ev"]

[node name="text_bubble" type="Node2D"]
modulate = Color(1, 1, 1, 0.913725)
z_index = 1
script = ExtResource("1_a7t4n")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(3.5, 11)
texture = ExtResource("1_bn1ev")

[node name="Label" type="Label" parent="."]
offset_left = -62.0
offset_top = -16.0
offset_right = 69.0
offset_bottom = 28.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 4
theme_override_fonts/font = ExtResource("1_5rf73")
theme_override_font_sizes/font_size = 8
text = "Mankind Is Dead.
 Blood Is Fuel. 
Hell Is Full."
horizontal_alignment = 1
autowrap_mode = 3
metadata/_edit_use_anchors_ = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.03

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(3, 4.5)
scale = Vector2(8.4, 3.95)

[node name="VisibleOnScreenNotifier2D2" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(155, 88)

[node name="VisibleOnScreenNotifier2D3" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-155, -66)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
